--- a/smartwifi_ios_sdk/Classes/Localizations/ru.lproj/SWFLocalizable.strings
+++ b/smartwifi_ios_sdk/Classes/Localizations/ru.lproj/SWFLocalizable.strings
@@ -19,6 +19,7 @@
 "unable_to_join_the_network" = "Wi-Fi сеть не обнаружена по близости";
 "not_connected_previously" = "Не был подключен ранее";
 "unknown_error" = "Произошла неизвестная ошибка";
+"no_internet_connection" = "Нет интернет соединения";
 
 // NEHotspotConfigurationError
 "configuration_is_invalid" = "Конфигурация Wi-Fi недействительна";
