--- a/smartwifi_ios_sdk/Classes/Localizations/ru.lproj/SWFLocalizable.strings
+++ b/smartwifi_ios_sdk/Classes/Localizations/ru.lproj/SWFLocalizable.strings
@@ -11,6 +11,7 @@
 "saving_data_error" = "Ошибка кодирования модели в data";
 "session_object_is_corrupted" = "Объект сессии поврежден";
 "wifi_module_switch_off" = "У вас выключен модуль Wi-Fi, откройте настройки и включите его";
+"session_is_not_created" = "Сессия не создана. Необходимо создать сессию перед началом использования";
 "session_is_not_configured" = "Сессия не настроена. Необходимо настроить сессию перед началом использования";
 "no_configs_in_cache_memory" = "Нет сохраненных конфигураций";
 "empty_response_configs_data" = "Полученный список конфигураций пустой";
